remove some useless modules